# local-ai-chat

./: .gitignore  README.md  pyproject.toml
local_ai/src/: main.py
local_ai/src/cli/: commands.py  interface.py
local_ai/src/core/: chat_engine.py  model_manager.py  stream_handler.py
local_ai/src/data/config/: settings.yaml
local_ai/src/models/: multimodal.py
local_ai/src/utils/: config_loader.py  data_privacy.py  error_handler.py
scripts/: setup_env.bat  setup_env.sh
